<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/cal_inc_card_margin"
        android:layout_marginRight="@dimen/cal_inc_card_margin"
        app:cardCornerRadius="@dimen/_10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/_20dp"
            android:theme="@style/textview_style"
            android:weightSum="3">

            <Com.knoventive.nutri.Util.CustomTextView_Air_Semibold
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Step_4"
                android:layout_weight=".5"
                android:textSize="@dimen/_25sp" />

            <Com.knoventive.nutri.Util.CustomTextView_Air_light
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight=".5"
                android:textSize="@dimen/_16sp"
                android:text="@string/step_4_desc_1" />
            <Com.knoventive.nutri.Util.CustomTextView_Air_light
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:textSize="@dimen/_16sp"
                android:gravity="center"
                android:text="@string/step_4_desc_2" />
            <Com.knoventive.nutri.Util.CustomTextView_Air_light
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:textSize="@dimen/_16sp"
                android:gravity="center"
                android:text="@string/step_4_desc_3" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/review"
                android:layout_weight="1"
                android:layout_marginBottom="@dimen/_10dp"
                />
        </LinearLayout>
    </android.support.v7.widget.CardView>

</android.support.v7.widget.LinearLayoutCompat>
