<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/cal_inc_card_margin"
        android:layout_marginRight="@dimen/cal_inc_card_margin"
        app:cardCornerRadius="@dimen/_10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:theme="@style/textview_style">

            <Com.knoventive.nutri.Util.CustomTextView_Air_Semibold
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/Step_1"
                android:layout_marginTop="@dimen/_20dp"
                android:textSize="@dimen/_25sp" />

            <Com.knoventive.nutri.Util.CustomTextView_Air_light
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20dp"
                android:textSize="@dimen/_16sp"
                android:layout_gravity="center"
                android:text="@string/type_patient_weight" />


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_70dp"
                android:layout_marginRight="@dimen/_70dp"
                android:layout_marginTop="@dimen/step_1_margin_top"
                android:padding="@dimen/_10dp"
                android:layout_marginBottom="@dimen/step_1_margin_top">

                <Com.knoventive.nutri.Util.CustomTextView_Air_Ult_light
                    android:id="@+id/Weight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:focusable="false"
                    android:gravity="center"
                    android:text="58"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/_90sp" />

                <Com.knoventive.nutri.Util.CustomTextView_img
                    android:id="@+id/weight_img"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/Weight"
                    android:layout_marginBottom="@dimen/_10dp"
                    android:gravity="end"
                    android:text="i"
                    android:textColor="@color/orange"
                    android:textSize="@dimen/_30sp" />

                <Com.knoventive.nutri.Util.CustomTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/Weight"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_5dp"
                    android:gravity="center"
                    android:textSize="@dimen/_18sp"
                    android:text="@string/Weight_kg"
                    android:textColor="@color/black" />
            </RelativeLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>


</android.support.v7.widget.LinearLayoutCompat>