<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/card_view_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroud_main"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:background="@drawable/contact_us"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:padding="@dimen/_10dp"
                android:layout_alignParentLeft="true"
                android:layout_alignLeft="@+id/header_text"
                android:src="@drawable/home" />

            <Com.knoventive.nutri.Util.CustomTextView_Air_Semibold
                android:id="@+id/header_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_centerInParent="true"
                android:layout_marginRight="@dimen/_50dp"
                android:text="@string/contact_us"
                android:textSize="@dimen/_20sp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/_100dp"
            android:layout_weight="2"
            android:layout_marginTop="@dimen/neg_40"
            android:orientation="vertical"
            android:paddingBottom="@dimen/_5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <android.support.v7.widget.CardView
                    android:id="@+id/call"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/contact_card_mar_left"
                    android:layout_marginRight="@dimen/contact_card_mar_right"
                    android:layout_weight="1"
                    android:padding="@dimen/_5dp"
                    app:cardCornerRadius="@dimen/_10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="vertical">

                        <Com.knoventive.nutri.Util.CustomTextView_img
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/_15dp"
                            android:gravity="center"
                            android:text="a"
                            android:textColor="@color/grey"
                            android:textSize="@dimen/_40sp" />

                        <Com.knoventive.nutri.Util.CustomTextView_Air_light
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/call"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_18sp" />

                        <Com.knoventive.nutri.Util.CustomTextView_Air_Semibold
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/text1"
                            android:layout_marginTop="@dimen/_5dp"
                            android:gravity="center"
                            android:text="@string/Knoventive"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_16sp" />

                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/contact_card_mar_right"
                    android:layout_marginRight="@dimen/contact_card_mar_left"
                    android:layout_weight="1"
                    android:padding="@dimen/_5dp"
                    app:cardCornerRadius="@dimen/_10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="vertical">

                        <Com.knoventive.nutri.Util.CustomTextView_img
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/_15dp"
                            android:gravity="center"
                            android:text="b"
                            android:textColor="@color/grey"
                            android:textSize="@dimen/_40sp" />

                        <Com.knoventive.nutri.Util.CustomTextView_Air_light
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/email"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_18sp" />

                        <Com.knoventive.nutri.Util.CustomTextView_Air_Semibold
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_5dp"
                            android:gravity="center"
                            android:text="@string/Knoventive"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_16sp" />
                    </LinearLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/contact_card_marginTop"
                android:layout_weight="1"
                android:orientation="horizontal">

                <android.support.v7.widget.CardView
                    android:id="@+id/website"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/contact_card_mar_left"
                    android:layout_marginRight="@dimen/contact_card_mar_right"
                    android:layout_weight="1"
                    android:padding="@dimen/_5dp"
                    app:cardCornerRadius="@dimen/_10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"

                        android:gravity="center"
                        android:orientation="vertical">

                        <Com.knoventive.nutri.Util.CustomTextView_img
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/_15dp"
                            android:gravity="center"
                            android:text="d"
                            android:textColor="@color/grey"
                            android:textSize="@dimen/_40sp" />

                        <Com.knoventive.nutri.Util.CustomTextView_Air_light
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/Website"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_16sp" />

                        <Com.knoventive.nutri.Util.CustomTextView_Air_Semibold
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_5dp"
                            android:gravity="center"
                            android:text="@string/Knoventive"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_16sp" />
                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/privacy"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/_5dp"
                    android:layout_marginLeft="@dimen/contact_card_mar_right"
                    android:layout_marginRight="@dimen/contact_card_mar_left"
                    android:layout_weight="1"
                    app:cardCornerRadius="@dimen/_10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="vertical">

                        <Com.knoventive.nutri.Util.CustomTextView_img
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/_15dp"
                            android:gravity="center"
                            android:text="c"
                            android:textColor="@color/grey"
                            android:textSize="@dimen/_40sp" />

                        <Com.knoventive.nutri.Util.CustomTextView_Air_light
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/privacy_statement"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_16sp" />

                        <Com.knoventive.nutri.Util.CustomTextView_Air_Semibold
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_5dp"
                            android:gravity="center"
                            android:text="@string/Knoventive"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_16sp" />
                    </LinearLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <include
        layout="@layout/footer"></include>
</RelativeLayout>